# FerryGym

./: .gitignore  Dataset.ipynb  LICENSE  README.md  __init__.py  playEnvBook.ipynb  pyproject.toml
ferrygym/: FerryGymBook.ipynb  FerryGymEnv.py  MapRevMoenk.py  Ship.py  constants.py  cost.py  df_2022-04-10 13:00:01+00:00.pkl  load-trajectories.ipynb  play-env.py  plot_helpers.py  policy-direct.py  policy-hardcoded.py  policy_hardcoded.py  sea-land-coordinates.json  sea-land.json
ferrygym/utils/: CoordinateTransform.py  graphics.py
