[tool.poetry]
name = "ferrygym"
version = "0.1.0"
description = ""
authors = ["Raphael Schwinger <raphaelschwinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
gym = "==0.25.1"
pygame = "==2.3.0"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
torch = "^2.0.0"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
